crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_not_found/unresolved_base/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier not found.
   ╭─[input.sol:4:15]
   │
 4 │ contract C is Missing {}
   │               ───┬───  
   │                  ╰───── Error occurred here.
───╯
